Inicio da implementacao da funcao insere virgula